# RSDKv5-Decompilation

./: .gitignore  .gitmodules  .gitpod.yml  Android.mk  CMakeLists.txt  FAQ.md  Game  LICENSE.md  Makefile  README.md  RSDKv5.sln  RSDKv5U.sln  clang-format-commands.txt  outfile
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: android.yml  build.yml
RSDKv5/: RSDKv5.rc  RSDKv5_dx11.vcxproj  RSDKv5_dx9.vcxproj  RSDKv5_dx9.vcxproj.filters  RSDKv5_gl3.vcxproj  RSDKv5_gl3.vcxproj.filters  RSDKv5_ogl.vcxproj  RSDKv5_ogl.vcxproj.filters  RSDKv5_sdl2.vcxproj  RSDKv5_sdl2.vcxproj.filters  RSDKv5_vk.vcxproj  RSDKv5_vk.vcxproj.filters  main.cpp  main.hpp  resource.h
RSDKv5.xcodeproj/: project.pbxproj
RSDKv5/RSDK/Audio/: Audio.cpp  Audio.hpp
RSDKv5/RSDK/Audio/AAudio/: AAudioDevice.cpp  AAudioDevice.hpp
RSDKv5/RSDK/Audio/Legacy/: AudioLegacy.cpp  AudioLegacy.hpp
RSDKv5/RSDK/Audio/MiniAudio/: MiniAudioDevice.cpp  MiniAudioDevice.hpp
RSDKv5/RSDK/Audio/NX/: NXAudioDevice.cpp  NXAudioDevice.hpp
RSDKv5/RSDK/Audio/Oboe/: OboeAudioDevice.cpp  OboeAudioDevice.hpp
RSDKv5/RSDK/Audio/PortAudio/: PortAudioDevice.cpp  PortAudioDevice.hpp
RSDKv5/RSDK/Audio/SDL2/: SDL2AudioDevice.cpp  SDL2AudioDevice.hpp
RSDKv5/RSDK/Audio/XAudio/: XAudioDevice.cpp  XAudioDevice.hpp
RSDKv5/RSDK/Core/: Link.cpp  Link.hpp  Math.cpp  Math.hpp  ModAPI.cpp  ModAPI.hpp  Reader.cpp  Reader.hpp  RetroEngine.cpp  RetroEngine.hpp
RSDKv5/RSDK/Core/Legacy/: ModAPILegacy.cpp  ModAPILegacy.hpp  RetroEngineLegacy.cpp  RetroEngineLegacy.hpp
RSDKv5/RSDK/Dev/: Debug.cpp  Debug.hpp  devfont_to_hpp.py
RSDKv5/RSDK/Graphics/: Animation.cpp  Animation.hpp  Drawing.cpp  Drawing.hpp  Palette.cpp  Palette.hpp  Scene3D.cpp  Scene3D.hpp  Sprite.cpp  Sprite.hpp  Video.cpp  Video.hpp
RSDKv5/RSDK/Graphics/DX11/: BackupShaders.hpp  DX11RenderDevice.cpp  DX11RenderDevice.hpp
RSDKv5/RSDK/Graphics/DX9/: DX9RenderDevice.cpp  DX9RenderDevice.hpp
RSDKv5/RSDK/Graphics/EGL/: EGLRenderDevice.cpp  EGLRenderDevice.hpp
RSDKv5/RSDK/Graphics/GLFW/: GLFWRenderDevice.cpp  GLFWRenderDevice.hpp
RSDKv5/RSDK/Graphics/Legacy/: AnimationLegacy.cpp  AnimationLegacy.hpp  DrawingLegacy.cpp  DrawingLegacy.hpp  PaletteLegacy.cpp  PaletteLegacy.hpp  Scene3DLegacy.cpp  Scene3DLegacy.hpp  SpriteLegacy.cpp  SpriteLegacy.hpp
RSDKv5/RSDK/Graphics/NX/: NXRenderDevice.cpp
RSDKv5/RSDK/Graphics/SDL2/: SDL2RenderDevice.cpp  SDL2RenderDevice.hpp
RSDKv5/RSDK/Graphics/Vulkan/: BackupShaders.hpp  VulkanRenderDevice.cpp  VulkanRenderDevice.hpp
RSDKv5/RSDK/Input/: Input.cpp  Input.hpp
RSDKv5/RSDK/Input/Android/: AndroidInputDevice.hpp
RSDKv5/RSDK/Input/GLFW/: GLFWInputDevice.cpp
RSDKv5/RSDK/Input/Keyboard/: KBInputDevice.cpp
RSDKv5/RSDK/Input/NX/: NXInputDevice.cpp  NXInputDevice.hpp
RSDKv5/RSDK/Input/Paddleboat/: PDBInputDevice.cpp  PDBInputDevice.hpp
RSDKv5/RSDK/Input/RawInput/: RawInputDevice.cpp  RawInputDevice.hpp
RSDKv5/RSDK/Input/SDL2/: SDL2InputDevice.cpp  SDL2InputDevice.hpp
RSDKv5/RSDK/Input/Steam/: SteamInputDevice.cpp
RSDKv5/RSDK/Input/XInput/: XInputDevice.cpp
RSDKv5/RSDK/Scene/: Collision.cpp  Collision.hpp  Object.cpp  Object.hpp  Scene.cpp  Scene.hpp
RSDKv5/RSDK/Scene/Legacy/: CollisionLegacy.cpp  CollisionLegacy.hpp  ObjectLegacy.cpp  ObjectLegacy.hpp  SceneLegacy.cpp  SceneLegacy.hpp
RSDKv5/RSDK/Scene/Objects/: DefaultObject.cpp  DefaultObject.hpp  DevOutput.cpp  DevOutput.hpp
RSDKv5/RSDK/Storage/: Storage.cpp  Storage.hpp  Text.cpp  Text.hpp
RSDKv5/RSDK/Storage/Legacy/: TextLegacy.cpp  TextLegacy.hpp  UserStorageLegacy.cpp  UserStorageLegacy.hpp
RSDKv5/RSDK/User/Core/: UserAchievements.cpp  UserAchievements.hpp  UserCore.cpp  UserCore.hpp  UserLeaderboards.cpp  UserLeaderboards.hpp  UserPresence.cpp  UserPresence.hpp  UserStats.cpp  UserStats.hpp  UserStorage.cpp  UserStorage.hpp
RSDKv5/RSDK/User/Dummy/: DummyAchievements.cpp  DummyAchievements.hpp  DummyCore.cpp  DummyCore.hpp  DummyLeaderboards.cpp  DummyLeaderboards.hpp  DummyStats.cpp  DummyStorage.cpp
RSDKv5/RSDK/User/EOS/: EOSStorage.hpp
RSDKv5/RSDK/User/NX/: NXAchievements.hpp  NXCore.hpp  NXStats.hpp  NXStorage.hpp
RSDKv5/RSDK/User/Steam/: SteamAchievements.hpp  SteamCore.hpp  SteamLeaderboards.hpp  SteamStats.hpp
RSDKv5/Shaders/: .gitignore
RSDKv5/Shaders/DX11/: None.hlsl
RSDKv5/Shaders/GL3/: Clean.fs  None.fs  None.vs  RGB-Image.fs  YUV-422.fs
RSDKv5/Shaders/OGL/: CRT-Yee64.fs  CRT-Yeetron.fs  None.fs  YUV-420.fs  YUV-444.fs
RSDKv5/Shaders/Vulkan/: CRT-Yee64.frag  CRT-Yeetron.frag  Clean.frag  None.frag  None.vert  RGB-Image.frag  YUV-420.frag  YUV-422.frag  YUV-444.frag  backup.frag  compile.py
RSDKv5U/: RSDKv5U.rc  RSDKv5U_dx11.vcxproj  RSDKv5U_dx11.vcxproj.filters  RSDKv5U_dx9.vcxproj  RSDKv5U_dx9.vcxproj.filters  RSDKv5U_gl3.vcxproj  RSDKv5U_gl3.vcxproj.filters  RSDKv5U_ogl.vcxproj  RSDKv5U_ogl.vcxproj.filters  RSDKv5U_sdl2.vcxproj  RSDKv5U_sdl2.vcxproj.filters  RSDKv5U_vk.vcxproj  RSDKv5U_vk.vcxproj.filters  resource.h
RSDKv5U.xcodeproj/: project.pbxproj
RSDKv5U.xcodeproj/xcshareddata/xcschemes/: RSDKv5U.xcscheme
android/: build.gradle  gradle.properties  release-key.jks
android/app/: .gitignore  build.gradle
android/app/jni/: .gitignore  Android.mk  CMakeLists.txt
android/app/src/main/: AndroidManifest.xml
android/gradle/wrapper/: gradle-wrapper.properties
dependencies/all/: .gitignore  README.md  clownmd5.h
dependencies/all/iniparser/: iniparser.cpp
dependencies/all/miniz/: LICENSE.md
dependencies/all/tinyxml2/: CMakeLists.txt  dox  xmltest.cpp
dependencies/android/: .gitignore  README.md  androidHelpers.cpp  androidHelpers.h  androidHelpers.hpp
dependencies/gl3/: README.md
dependencies/ios/: .gitignore
dependencies/mac/: .gitignore  README.md
dependencies/ogl/: README.md
dependencies/switch/libnx-dyn/: README.md  address_space.c  address_space.h  dyn.c  dyn.h  dynamic_wrap.c
dependencies/wiiu/: PKGBUILD  README.md
dependencies/windows/: README.md
filters/: GL3.slnf
filters/all/: GL3.slnf
makefiles/: Linux.cfg  Switch.cfg  Windows.cfg
wiiu/: CMakeLists.txt
(+42 files in other folders)
